ENH: added textarea for output so that user can edit json in place (issue #48) - also added automatic overflow for output widget so that when area is exceeded, a scrollbar only for the output area will get visible

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -34,11 +34,11 @@
     height: 18px;
 }
 
-fieldset {
-    border: 0;
-}
-
 .md-button.smaller {
     margin: 0;
     min-height: 5px;
+}
+
+md-input-container textarea.md-input {
+  border: 0;
 }
